# CodeSnippetBot

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_app.py
