  [build-system]
  requires = ["setuptools", "wheel"]
  build-backend = "setuptools.build_meta"

  [project]
  name = "huggingworkflow"
  version = "0.1.0"
  description = "A workflow management tool integrating with Hugging Face."
  authors = [
    { name = "Your Name", email = "your.email@example.com" }
  ]
  license = { text = "MIT" }
  readme = "README.md"
  requires-python = ">=3.6"
  dependencies = [
    "requests",
    "numpy",
    # Add other dependencies here
  ]
  classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
  ]
